# RT-CMF-sys

./: .gitignore  README.md  UML.drawio  Untitled Diagram.drawio  access.py  db_yay.db  db_yay.json  errors.py  main.py  module.py  object_managment.drawio  pyproject.toml  system.py  temp.py
CMFvisual/: analysis.py
analysis_stage/: analysis_mod.py  analysis_scheme.py  analyzer.py  searchable.py
analysis_stage/subspaces/: searchable.py  shard.py  shard_extraction.py
analysis_stage/tests/: shard_ext_test.py
cmf_graphics/: one_d_vis.py
configs/: analysis.py  database.py  db_usages.py  search.py  system.py
data_managment/: database.py  errors.py  formatter.py  pFq_fmt.py  util_types.py
data_managment/functions/: __init__.py  pFq_fmt.py
db_stage/: database.py  db_scheme.py  errors.py
db_stage/funcs/: formatter.py  pFq_fmt.py
db_stage/functions/: pFq_fmt.py
db_stage/tests/: db_v1_test.db  db_v1_test.json  db_v1_test.py
experiments/: OnCMFs.ipynb  test_shards.ipynb
local/cmf_graphics/: one_d_vis.py
local/experiments/: test_shards.ipynb
rt_search/: access.py
rt_search/analysis_stage/: analysis_scheme.py
rt_search/configs/: analysis.py  database.py  search.py  system.py
s_analysis/: m_analyzer.py
s_db/: database.py  db_connector.py  db_scheme.py  errors.py
s_search/: search_method.py
search_init/: analyzer.py  searchable.py
search_stage/: data_manager.py  search_method.py  searcher_scheme.py  serial_searcher.py
system/: system.py
utils/: logger.py  plane.py  point_generator.py  position.py  types.py  util_types.py
(+71 files in other folders)
