[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["configs", "experiments", "data_managment"]

[project]
name = "RT-CMF-sys"
version = "0.1.0"
description = "Irationality searching for a constant"
authors = [{ name="Uri K.H."}]
dependencies = [
    "peewee",
    "sympy",
    "ramanujantools"
]