[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "configs",
    "db_stage",
    "analysis_stage",
    "search_stage",
    "system",
    "utils"
]

[project]
name = "rt_cmf_sys"
version = "0.1.0"
description = "Irationality searching for a constant"
authors = [{ name="Uri K.H." }]
dependencies = [
    "peewee",
    "sympy",
    "ramanujantools",
    "matplotlib",
    "numpy",
    "mpmath",
    "networkx",
    "tqdm",
    "requests",
    "LIReC @ git+https://github.com/RamanujanMachine/LIReC.git@main"
]